# rnd_reports

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements.txt  rnd5_late_iv_offpolicy_demo.ipynb  rnd5_late_iv_offpolicy_demo_with_ci.ipynb
01_bonferroni_aa_matching/: notebook.ipynb  report.md  rnd1_multiplicity_rerandomization_demo.ipynb
02_pyspark_fast_aa/: notebook.ipynb
03_autoconfig_homogeneity_split/: notebook.ipynb  report.md  rnd3_max_iter_demo.ipynb
04_faiss_matcher_tradeoff/: notebook.ipynb  report.md
05_rnd_iv_cupac_policy/: notebook.ipynb  report.md
1_multi_test_corrertions/: multi_test_corrertions.ipynb
2_rerand_iter_number/: rerand_iter_number.ipynb
archive/: rnd1_multiplicity_rerandomization_demo.ipynb  rnd5_late_iv_offpolicy_demo.ipynb  rnd5_late_iv_offpolicy_demo_with_ci.ipynb
code/: simulation_balance_vs_mht.py
docs/: 06_datasets_setup.md  06_expanded_dataset_scouting.md  06_real_dataset_raw_audit.md  06_safe_intime_cupac_context.md  06_safe_intime_cupac_implementation_plan.md  CONTEXT_TZ.md  WORKFLOW.md  feature_safety_policy.md  migration_from_varwar.md  variance_reduction_methodology.md
planned_rnd/: README.md
report/: report.md  simulation_results.csv
rnd_01_ab_дизайн_экспериментов/: README.md  report.md
rnd_01_статьи_и_математика/: report.md
rnd_02_множественные_проверки/: analysis.ipynb
rnd_03_рерандомизация/: analysis.ipynb  report.md  report_for_pdf.txt  simulation.py  simulation_results.csv
rnd_04_план_внедрения/: analysis.ipynb  report.md
tests/: test_cuped.py  (+17 more)
(+85 files in other folders)
