[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rnd_reports"
version = "0.0.0"
description = "Общий код R&D-исследований репозитория rnd_reports (src/rnd_reports)."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
