[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rnd_reports"
version = "0.0.0"
description = "Общий код R&D-исследований репозитория rnd_reports (src/rnd_reports)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Тяжёлые/опциональные ML-зависимости (CatBoost-ветка CUPAC).
ml = ["catboost>=1.2"]
# Spark-адаптеры R&D-7 (rnd_reports.embeddings): не нужны остальному пакету.
spark = ["pyspark>=3.3"]
# Инструменты разработки.
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
